# GraphEngine

./: .gitignore  CMakeLists.txt  Examples.md  LICENSE  README.md  main.cpp  test.cpp
headers/: Graph.h  algorithm.h  generator.h  stats.h
sources/: Graph.cpp  algorithm.cpp  generator.cpp  stats.cpp
tests/: out.csv  test.cpp
